--- a/Density Calculator/build.gradle
+++ b/Density Calculator/build.gradle
@@ -3,10 +3,10 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
     }
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion "23.0.3"
     defaultConfig {
-        applicationId "com.styx.androiddevelopertoolbox"
+        applicationId "com.styx.densitycalculator"
         minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
@@ -21,5 +21,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:23.2.1'
+    compile 'com.github.javiersantos:MaterialStyledDialogs:1.0'
+    compile 'com.android.support:design:24.2.1'
 }
